Leo extension (#95)
Added Leo extension